#
# configure.in - input script to autoconf to
#                configure directory
#
# This file is part of the GNU PIC Library.
#
# Originally written by
# 	Vangelis Rokas <vrokas@otenet.gr>
#
# Adopted for the SDCC/pic14 library by
#	Raphael Neider <rneider@web.de>
#
# $Id$
#

# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.57)
AC_INIT

AC_DEFUN(AC_CONFIG_SRCDIR)
#AC_DEFUN(AC_CONFIG_FILES)

# Checks for programs.
AC_CHECK_PROG(GPASM,	gpasm,	gpasm, :)
AC_CHECK_PROG(GPLINK,	gplink,	gplink, :)
AC_CHECK_PROG(GPLIB,	gplib,	gplib, :)

AC_CHECK_PROG(RM,	rm,	[rm -f], :)
AC_CHECK_PROG(CP,	cp,	cp, :)
AC_CHECK_PROG(MV,	mv,	mv, :)
AC_CHECK_PROG(LS,	ls,	ls, :)
AC_CHECK_PROG(SED,	sed,	sed, :)
AC_PROG_EGREP
AC_CHECK_PROG(MKDIR,	mkdir,	[mkdir -p], :)
AC_CHECK_PROG(RMDIR,	rmdir,	rmdir, :)

AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile.common])
AC_OUTPUT
