#
# configure.in - input script to autoconf to
#                configure directory
#
# This file is part of the GNU PIC Library.
#
# January, 2004
# The GNU PIC Library is maintained by,
# 	Vangelis Rokas <vrokas@otenet.gr>
#
# $Id$
#

# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.60)
AC_INIT

AC_DEFUN(AC_CONFIG_SRCDIR)
#AC_DEFUN(AC_CONFIG_FILES)

# Checks for programs.
AC_CHECK_PROG(GPASM,	gpasm,	gpasm, :)
AC_CHECK_PROG(GPLINK,	gplink,	gplink, :)
AC_CHECK_PROG(GPLIB,	gplib,	gplib, :)

AC_CHECK_PROG(RM,	rm,	[rm -f], :)
AC_CHECK_PROG(CP,	cp,	cp, :)
AC_CHECK_PROG(MV,	mv,	mv, :)
AC_CHECK_PROG(LS,	ls,	ls, :)
AC_CHECK_PROG(SED,	sed,	sed, :)
AC_PROG_EGREP
AC_CHECK_PROG(MKDIR,	mkdir,	[mkdir -p], :)
AC_CHECK_PROG(RMDIR,	rmdir,	rmdir, :)

AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

$CP "$srcdir"/pics.all pics.build

AC_CONFIG_FILES([Makefile
                 Makefile.common
                 debug/Makefile
                 debug/gstack/Makefile
                 libc/Makefile
                 libc/ctype/Makefile
                 libc/delay/Makefile
                 libc/stdio/Makefile
                 libc/stdlib/Makefile
                 libc/string/Makefile
                 libc/utils/Makefile
                 libdev/Makefile
                 libio/Makefile
                 libio/adc/Makefile
                 libio/i2c/Makefile
                 libio/usart/Makefile
                 libm/Makefile
                 libsdcc/Makefile
                 libsdcc/char/Makefile
                 libsdcc/fixed16x16/Makefile
                 libsdcc/float/Makefile
                 libsdcc/gptr/Makefile
                 libsdcc/int/Makefile
                 libsdcc/long/Makefile
                 libsdcc/lregs/Makefile
                 libsdcc/stack/Makefile
                 startup/Makefile
                 ])
AC_OUTPUT
